--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,7 @@ jobs:
 
     - run: |
        # make bootstrap
-       make debug
+       msbuild
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
