--- a/SMSPortal/packages.config
+++ b/SMSPortal/packages.config
@@ -16,6 +16,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="NPOI" version="2.5.3" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net461" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net461" />
   <package id="Twilio" version="5.55.0" targetFramework="net461" />
   <package id="Twilio.AspNet.Common" version="5.37.2" targetFramework="net461" />
